--- a/index.html
+++ b/index.html
@@ -87,6 +87,19 @@
         font-family: 'Playfair Display', serif;
         font-style: italic;
         font-weight: 400;
+        background: linear-gradient(135deg, #0051a8, #00C6FF);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        background-clip: text;
+      }
+      .accent-word-dark {
+        font-family: 'Playfair Display', serif;
+        font-style: italic;
+        font-weight: 400;
+        background: linear-gradient(135deg, #003d7a, #0071E3);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        background-clip: text;
       }
 
       /* ===== ANIMATION KEYFRAMES ===== */
@@ -151,18 +164,29 @@
       .animate-spin-slow { animation: spin-slow 12s linear infinite; }
       .animate-marquee { animation: marquee 30s linear infinite; }
       .animate-fade-in-up { animation: fade-in-up 0.8s cubic-bezier(0.22, 1, 0.36, 1) forwards; }
+
+      /* ===== SPOTLIGHT CARD ===== */
+      .card-spotlight {
+        position: relative;
+        border-radius: 1.5rem;
+        border: 1px solid #222;
+        background-color: #111;
+        overflow: hidden;
+        --mouse-x: 50%;
+        --mouse-y: 50%;
+        --spotlight-color: rgba(255, 255, 255, 0.05);
+      }
+      .card-spotlight::before {
+        content: '';
+        position: absolute;
+        top: 0; left: 0; right: 0; bottom: 0;
+        background: radial-gradient(circle at var(--mouse-x) var(--mouse-y), var(--spotlight-color), transparent 60%);
+        opacity: 0;
+        transition: opacity 0.5s ease;
+        pointer-events: none;
+      }
+      .card-spotlight:hover::before { opacity: 1; }
     </style>
-  <script type="importmap">
-{
-  "imports": {
-    "framer-motion": "https://esm.sh/framer-motion@^12.33.0",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
-    "react/": "https://esm.sh/react@^19.2.4/",
-    "react": "https://esm.sh/react@^19.2.4"
-  }
-}
-</script>
-<link rel="stylesheet" href="/index.css">
 </head>
   <body>
     <div id="root"></div>
